--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# This .gitignore file includes the github .gitignore templates
+# for both latex and R. It additionally ignores  hidden icon?
+# .DS_Store files on Apple computers.
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -304,3 +308,64 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+
+# History files
+.Rhistory
+.Rapp.history
+
+# Session Data files
+.RData
+.RDataTmp
+
+# User-specific files
+.Ruserdata
+
+# Example code in package build process
+*-Ex.R
+
+# Output files from R CMD build
+/*.tar.gz
+
+# Output files from R CMD check
+/*.Rcheck/
+
+# RStudio files
+.Rproj.user/
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
+*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+# R Environment Variables
+.Renviron
+
+# pkgdown site
+docs/
+
+# translation temp files
+po/*~
+
+# RStudio Connect folder
+rsconnect/
+
+
+## Hidden Apple files to ignore
+.DS_Store
+Icon?
+
+## Add your own files to ignore below
+
+
+
+/.quarto/
