--- a/_extensions/amherst-thesis/_extension.yml
+++ b/_extensions/amherst-thesis/_extension.yml
@@ -24,6 +24,7 @@ contributes:
       - outer=1in
       - top=1in
       - bottom=1in
+      - heightrounded
       block-headings: false
       colorlinks: true
       linestretch: 2
